<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Android_testActivity!</string>
    <string name="app_name">Android_test</string>
    <string name="btn_init">Init</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_get_recognized_str">Recognized</string>
    <string name="btn_setting">setting</string>
</resources>
